# JLLVM

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/actions/dependencies/: action.yml
.github/actions/llvm-build/: action.yml
.github/workflows/: builds.yml  lint.yml  llvm-cache.yml  pages.yml
docs/: CMakeLists.txt  conf.py  index.md  requirements.txt
src/: CMakeLists.txt
src/jllvm/: CMakeLists.txt
src/jllvm/class/: ByteCode.def  ByteCodeIterator.cpp  ByteCodeIterator.hpp  CMakeLists.txt  ClassFile.cpp  ClassFile.hpp  Descriptors.cpp  Descriptors.hpp
src/jllvm/compiler/: ByteCodeCompileUtils.cpp  ByteCodeCompileUtils.hpp  CMakeLists.txt  ClassObjectStubCodeGenerator.cpp  ClassObjectStubCodeGenerator.hpp  ClassObjectStubMangling.cpp  ClassObjectStubMangling.hpp  CodeGenerator.cpp  CodeGenerator.hpp  CodeGeneratorUtils.cpp  CodeGeneratorUtils.hpp  Compiler.cpp  Compiler.hpp
src/jllvm/debuginfo/: CMakeLists.txt  TrivialDebugInfoBuilder.cpp  TrivialDebugInfoBuilder.hpp
src/jllvm/gc/: CMakeLists.txt  GarbageCollector.cpp  GarbageCollector.hpp  RootFreeList.cpp  RootFreeList.hpp
src/jllvm/llvm/: CMakeLists.txt  ClassObjectStubImportPass.cpp  MarkSanitizersGCLeafs.hpp
src/jllvm/main/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  Main.cpp  Main.hpp  Opts.td
src/jllvm/materialization/: ByteCodeCompileLayer.cpp  ByteCodeCompileLayer.hpp  ByteCodeCompileUtils.cpp  ByteCodeCompileUtils.hpp  ByteCodeLayer.cpp  ByteCodeLayer.hpp  ByteCodeMaterializationUnit.cpp  ByteCodeMaterializationUnit.hpp  ByteCodeOSRCompileLayer.cpp  ByteCodeOSRCompileLayer.hpp  ByteCodeOSRLayer.cpp  ByteCodeOSRLayer.hpp  ByteCodeOnDemandLayer.cpp  ByteCodeOnDemandLayer.hpp  CMakeLists.txt  ClassObjectDefinitionsGenerator.cpp  ClassObjectDefinitionsGenerator.hpp  ClassObjectStubCodeGenerator.cpp  ClassObjectStubCodeGenerator.hpp  ClassObjectStubDefinitionsGenerator.cpp  ClassObjectStubDefinitionsGenerator.hpp  ClassObjectStubMangling.cpp  ClassObjectStubMangling.hpp  CodeGenerator.cpp  CodeGenerator.hpp  CodeGeneratorUtils.cpp  CodeGeneratorUtils.hpp  Interpreter2JITAdaptorDefinitionsGenerator.cpp  Interpreter2JITAdaptorDefinitionsGenerator.hpp  Interpreter2JITLayer.cpp  Interpreter2JITLayer.hpp  InterpreterEntry.cpp  InterpreterEntry.hpp  InterpreterOSRLayer.cpp  InterpreterOSRLayer.hpp  InvokeStubsDefinitionsGenerator.cpp  InvokeStubsDefinitionsGenerator.hpp  JIT2InterpreterLayer.cpp  JIT2InterpreterLayer.hpp  JNIImplementationLayer.cpp  (+3 more)
src/jllvm/object/: CMakeLists.txt  ClassLoader.cpp  ClassLoader.hpp  ClassObject.cpp  ClassObject.hpp  GCRootRef.hpp  InteropHelpers.hpp  Object.cpp  Object.hpp  StringInterner.cpp  StringInterner.hpp
src/jllvm/support/: BigEndianArrayRef.hpp  BitArrayRef.hpp  Bytes.cpp  Bytes.hpp  CMakeLists.txt  CopyableAtomic.hpp  Encoding.cpp  Encoding.hpp  FileUtils.cpp  FileUtils.hpp  NonOwningFrozenSet.hpp  Variant.hpp
src/jllvm/unwind/: CMakeLists.txt  Unwinder.cpp  Unwinder.hpp
src/jllvm/vm/: CMakeLists.txt  ClassObjectStubImportPass.cpp  ClassObjectStubImportPass.hpp  Executor.hpp  GarbageCollector.cpp  GarbageCollector.hpp  InteropHelpers.hpp  Interpreter.cpp  Interpreter.hpp  JIT.cpp  JIT.hpp  JNIBridge.cpp  JNIBridge.hpp  JNIImplementation.cpp  JNIImplementation.hpp  JavaFrame.cpp  JavaFrame.hpp  MarkSanitizersGCLeafs.cpp  MarkSanitizersGCLeafs.hpp  NativeImplementation.cpp  NativeImplementation.hpp  OSRState.cpp  OSRState.hpp  Runtime.cpp  Runtime.hpp  StackMapRegistrationPlugin.cpp  StackMapRegistrationPlugin.hpp  StringInterner.cpp  StringInterner.hpp  VirtualMachine.cpp  VirtualMachine.hpp
src/jllvm/vm/native/: IO.cpp  IO.hpp  JDK.cpp  JDK.hpp  Lang.cpp  Lang.hpp  Security.cpp  Security.hpp
tests/: CMakeLists.txt  jllvm-lit.py  lit.cfg.py  lit.site.cfg.py.in
tests/Compiler/: elide-deopt.j  exceptions-missing-deopt.j  iadd.j  locals-deopt-types.j  locals-types-dataflow-merge.j  method-metadata.j  osr-frames.j  string-globals.j
tests/Execution/: abstract-class-interface.java  args.java  array-index-out-of-bounds-exception-error.java  array-inheritance.j  array-inheritance.java  arraycopy.java  assert.java  athow-null.java  athrow.java  basic-blocks.java  bipush.java  blocks-with-different-types-on-stack.j  checkcast.java  circular-class-loader.java  class-cast-exception-error.java  class-forname.java  class-object-as-java-object.java  compact-string-to-utf8.java  constant-value-fields.j  constructor-in-other-class.java  constructors.java  control-flow-false-positive.java  control-flow-path-dependent-operand-stack.java  create-array-of-other-class.java  create-array.java  dadd.java  ddiv.java  dead-code.j  deopt-smaller-than-pointer.j  dmul.java  dneg.java  double-casts.java  double-comparisons.java  double-float-bits.java  drem.java  dsub.java  dynamic-stack-usage-gc.java  empty-string.java  exception-handling-stack-type-mismatch.j  fadd.java  (+97 more)
tests/Main/: backedge-threshold.java  class-path.java
tests/System/: HelloWorld.java  array.java  arraycopy.java  class.java  print-unicode.java  thread.java
tests/tools/jllvm-jvmc/: invalid.java
tools/: CMakeLists.txt  main.cpp
tools/jllvm/: CMakeLists.txt
tools/jllvm-jvmc/: CMakeLists.txt  Opts.td  main.cpp
unittests/: BitArrayRefTests.cpp  CMakeLists.txt  DescriptorTests.cpp  GCRootRefTests.cpp  GarbageCollectorTests.cpp  HelloWorldTest.cpp  JNITests.cpp  NonOwningFrozenSetTests.cpp  RootFreeListTests.cpp
unittests/Inputs/: TestSimpleJNI.java
util/llvm/: prettyprinters.py
